--- a/css/modal.css
+++ b/css/modal.css
@@ -7,27 +7,23 @@
     height: 100%;
     background-color: rgba(0, 0, 0, 0.78);
 }
-
 .modal__form {
     background: #232323;
     width: 636px;
     height: 720px;
     border-radius: 5px;
 }
-
 .modal__form span {
     font-size: 40px;
     cursor: pointer;
     align-self: flex-end;
     padding-right: 35px;
 }
-
 .modal__form h5 {
     font: normal normal bold 38px/46px Lato;
     color: #f89d24;
     text-transform: uppercase;
 }
-
 .modal__form p {
     text-align: center;
     font: normal normal 300 16px/28px Lato;
@@ -36,8 +32,7 @@
     padding-bottom: 65px;
     padding-top: 30px;
 }
-
-.modal__form input {
+.modal__text-inputs input {
     width: 328px;
     height: 56px;
     background: #ffffff 0% 0% no-repeat padding-box;
@@ -56,38 +51,27 @@
     letter-spacing: 0.15px;
     color: #f89d24;
 }
-
 .modal__form .button-comprar {
     width: 230px;
 }
-
 .modal .buttons {
     flex: 1;
 }
-
 .modal__check {
     flex-direction: row;
     padding-bottom: 54px;
 }
-
 .modal__check input {
     width: 14px;
     height: 15px;
-    background: #ffffff00 0% 0% no-repeat padding-box;
-    border: 1px solid #f89d24;
-    margin-bottom: 0px;
     margin-right: 10px;
-    padding-bottom: 10px;
-    padding-left: 0px;
+    margin-bottom: 2px;
 }
-
 .modal__check label {
     margin-right: 76px;
 }
 .modal__check label span {
     text-decoration: underline;
-    text-align: left;
     font: normal normal normal 16px/19px Lato;
     letter-spacing: 0.15px;
-    color: #e1e1e1;
 }
