--- a/css/footer.css
+++ b/css/footer.css
@@ -14,7 +14,7 @@ footer {
     color: #b5b5b5;
 }
 
-@media screen and (min-width: 768px) {
+@media (min-width: 768px) {
     .footer {
         flex-direction: row;
         justify-content: space-between;
