--- a/css/metodologia.css
+++ b/css/metodologia.css
@@ -47,7 +47,7 @@
     padding-bottom: 30px;
 }
 
-@media screen and (min-width: 768px) {
+@media (min-width: 768px) {
     .metodologia {
         display: flex;
         justify-content: space-between;
