--- a/css/aptidao.css
+++ b/css/aptidao.css
@@ -58,7 +58,7 @@
     }
 }
 
-@media (max-height: 700px) {
+@media (min-width: 768px) and (max-height: 700px) {
     .aptidao {
         height: 130vh;
         max-height: 130vh;
