--- a/css/carousel.css
+++ b/css/carousel.css
@@ -55,7 +55,7 @@
     }
 }
 
-@media (max-height: 700px) {
+@media (min-width: 768px) and (max-height: 700px) {
     .carousel {
         height: 130vh;
         max-height: 130vh;
