--- a/css/header.css
+++ b/css/header.css
@@ -54,7 +54,7 @@
     }
 }
 
-@media (max-height: 700px) {
+@media (min-width: 768px) and (max-height: 700px) {
     .header-wrapper {
         height: 130vh;
         max-height: 130vh;
