--- a/css/metodologia.css
+++ b/css/metodologia.css
@@ -60,3 +60,10 @@
         width: 450px;
     }
 }
+
+@media (min-width: 768px) and (max-height: 700px) {
+    .metodologia {
+        height: 130vh;
+        max-height: 130vh;
+    }
+}
