--- a/css/carousel.css
+++ b/css/carousel.css
@@ -4,11 +4,11 @@
 
 .carousel > .slick-prev {
     left: 10px;
-    z-index: 1;
+    z-index: 111;
 }
 .carousel > .slick-next {
     right: 10px;
-    z-index: 1;
+    z-index: 111;
 }
 
 .slick-prev:before,
@@ -16,7 +16,7 @@
     display: none;
 }
 
-#carousel__card {
+.carousel__card {
     display: flex;
     background: url(../src/carousel.png);
     background-size: 100% 100%;
@@ -24,14 +24,14 @@
     height: 100vh;
 }
 
-#carousel__card p {
+.carousel__card p {
     font: normal normal normal 41px/52px Yantramanav;
     letter-spacing: 0.85px;
     padding-bottom: 24px;
 }
 
-#carousel__card p,
-#carousel__card h3 {
+.carousel__card p,
+.carousel__card h3 {
     position: relative;
     z-index: 99;
     text-align: center;
@@ -42,14 +42,15 @@
     .slick-next:before {
         display: block;
     }
-    #carousel__card {
+    .carousel__card {
         display: flex;
         background: url(../src/carousel-desktop.png);
         background-size: 100% 100%;
         background-repeat: no-repeat;
         height: 100vh;
+        z-index: 112;
     }
-    #carousel__card h3 {
+    .carousel__card h3 {
         align-self: flex-end;
         text-align: right;
     }
@@ -60,7 +61,7 @@
         height: 130vh;
         max-height: 130vh;
     }
-    #carousel__card {
+    .carousel__card {
         height: 130vh;
         max-height: 130vh;
     }
