--- a/css/header.css
+++ b/css/header.css
@@ -56,7 +56,7 @@
 
 @media (min-width: 768px) and (max-height: 700px) {
     .header-wrapper {
-        height: 130vh;
+        height: auto;
         max-height: 130vh;
     }
 }
